rm unnecessary flag from packaging